--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Employee Offboarding – Request</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header class="app-header">
@@ -173,7 +173,6 @@
         </div>
       </div>
 <h3>Approver Email IDs</h3>
-
 <div class="grid">
 
   <div class="field">
@@ -227,4 +226,5 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 ``
