--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
           <button id="btnHRFinalReject" class="btn danger">Reject</button>
         </div>
         <p class="muted" id="hrFinalMsg"></p>
+        <div class="actions" id="printButtonContainer" hidden>
+  <button id="btnPrintSummary" class="btn primary">Print Summary</button>
+</div>
       </section>
 
       <!-- Status -->
@@ -321,9 +324,78 @@
   </main>
 
   <footer class="footer">
-    <small>© Your Company</small>
+    <small>©ATA</small>
   </footer>
 
   <script src="app.js"></script>
+<div id="printArea" hidden>
+  <div class="print-wrapper">
+    <h1>Employee Offboarding Summary</h1>
+    <p><strong>Request ID:</strong> <span id="p_id"></span></p>
+    <p><strong>Employee Name:</strong> <span id="p_name"></span></p>
+    <p><strong>Employee ID:</strong> <span id="p_empid"></span></p>
+    <p><strong>Department:</strong> <span id="p_dept"></span></p>
+    <p><strong>Job Title:</strong> <span id="p_job"></span></p>
+    <p><strong>Last Working Day:</strong> <span id="p_lwd"></span></p>
+    <p><strong>Reason:</strong> <span id="p_reason"></span></p>
+
+    <hr/>
+
+    <h2>Approvals</h2>
+
+    <div class="stage">
+      <h3>Manager</h3>
+      <p><strong>Email:</strong> <span id="p_mgr_email"></span></p>
+      <p><strong>Comments:</strong> <span id="p_mgr_comments"></span></p>
+      <p><strong>Status:</strong> <span id="p_mgr_status"></span></p>
+    </div>
+
+    <div class="stage">
+      <h3>Finance</h3>
+      <p><strong>Email:</strong> <span id="p_fin_email"></span></p>
+      <p><strong>Pending Salary:</strong> <span id="p_fin_salary"></span></p>
+      <p><strong>Recovery Amount:</strong> <span id="p_fin_recovery"></span></p>
+      <p><strong>Comments:</strong> <span id="p_fin_comments"></span></p>
+      <p><strong>Status:</strong> <span id="p_fin_status"></span></p>
+    </div>
+
+    <div class="stage">
+      <h3>IT</h3>
+      <p><strong>Email:</strong> <span id="p_it_email"></span></p>
+      <p><strong>Laptop Returned:</strong> <span id="p_it_laptop"></span></p>
+      <p><strong>Email Disabled:</strong> <span id="p_it_mail"></span></p>
+      <p><strong>VPN Disabled:</strong> <span id="p_it_vpn"></span></p>
+      <p><strong>Other Systems:</strong> <span id="p_it_other"></span></p>
+      <p><strong>Comments:</strong> <span id="p_it_comments"></span></p>
+      <p><strong>Status:</strong> <span id="p_it_status"></span></p>
+    </div>
+
+    <div class="stage">
+      <h3>Admin</h3>
+      <p><strong>Email:</strong> <span id="p_admin_email"></span></p>
+      <p><strong>ID Card Returned:</strong> <span id="p_admin_idcard"></span></p>
+      <p><strong>Parking Disabled:</strong> <span id="p_admin_parking"></span></p>
+      <p><strong>Desk Cleared:</strong> <span id="p_admin_desk"></span></p>
+      <p><strong>Comments:</strong> <span id="p_admin_comments"></span></p>
+      <p><strong>Status:</strong> <span id="p_admin_status"></span></p>
+    </div>
+
+    <div class="stage">
+      <h3>Final HR</h3>
+      <p><strong>Email:</strong> <span id="p_hr_email"></span></p>
+      <p><strong>Experience Letter:</strong> <span id="p_hr_exp"></span></p>
+      <p><strong>Exit Interview:</strong> <span id="p_hr_exit"></span></p>
+      <p><strong>Comments:</strong> <span id="p_hr_comments"></span></p>
+      <p><strong>Final Status:</strong> <span id="p_hr_status"></span></p>
+    </div>
+
+    <hr/>
+
+    <h2>Timeline / Log</h2>
+    <pre id="p_history"></pre>
+  </div>
+</div>
+  
 </body>
 </html>
+
